v4.18
- fixed music and scrolling issue in intro level

v4.17.1
- hotfix for initialization script not working
- reconfigured freeram for a number of patches
- added in block duplication toggle

v4.17
- updated to retry system 0.5.1
- patched status bar optimization and controller read optimization
- updated cape turnaround patch to be toggleable
- included candle flame fix for those on sa-1
- fixed conflict with block duplication patch
- re-included the build scripts; updated the scripts
- updated lunar helper to 4.0.6 and uberasmtool to 1.6

v4.16
- updated to retry system 0.5
- adjusted save ram tables to accommodate Dragon Coin saving
- shuffled around gfx to accommodate retry system's sprite status bar
- dropped sprite item box patch
- fixed issue in pipes not showing yoshi
- improved in-LM sprite display

v4.15
- simplified the screen scrolling pipes even more
- changed pipe freeram to be one that clears on return to overworld
- added pipe tile that clears held item
- added blocks that control camera scroll or movement
- added single-use bounce block
- added Dragon Coin Save asm
- clean up of the documentation
- clean up of the global blocks
- renamed scripts because '@' is a bit problematic

v4.14
- added pballoon removal to powerup filter block
- moved some uberasm object things to gamemode
- updated PlayerXSpeedFix with a new option flag
- better organized the demo text
- fixed up gps list

v4.13
- new custom user toolbar buttons
- updated to Lunar Helper + Monitor 4.0.1
- updated some ExGraphics and map16
- Updated the basic text to be outlined
- adjusted some sprite remaps
- added a basic teleport block

v4.12
- new uberasm objects system; cleaned up level asm
- return of the grey double bounce shell (but no more messed up koopas)
- more extra-bit sprite enhancements; chucks remember behaviour, exit-enabled grow pipe, squished rex
- tweaked some global exanimations
- added spike top ceiling cling patch
- dropped the ram controlled fireballs feature