@@ -5,7 +5,6 @@ init:
 main:
     jsl retry_in_level_main
     jsl double_hit_fix_main
-    jsl clear_score_sprites_main
     JSL ScreenScrollingPipes_SSPMaincode
     rtl
 
